# schreibe-dein-programm

./: .gitignore
basics/: datatypes.rkt  erste-schritte.rkt
fallunterscheidungen/: flensburg.rkt
hgp-new-secd-racket/: debug-out.rkt  main-test.secd.rkt  operations.rkt  secd-compiler-test.rkt  secd-compiler.rkt  secd-dbg-print-it.rkt  secd-debug.rkt  secd-vm-data-types.rkt  secd-vm-defs.rkt  secd-vm-proc-test.rkt  secd-vm-proc.rkt  stack.rkt  test-prog.secd.rkt
listen/: Untitled.rkt
repl-lists-syntax/: racket-repl-tests.rkt  sdp-repl-tests.rkt
secd/: sample-compiler-hgp.rkt  sample-compiler.rkt  secd-hgp.rkt  secd.rkt
ya-secd-machine/: #secd-vm-defs.rkt#1#  #secd-vm-proc.rkt#2#  ResultsOfTasks.md  TODO.md  Untitled.rkt  algo-lib.secd.rkt  app-comp-bug.rtf  article.md  article.rkt  debug-out.rkt  fragen-anmerkungen.md  include-funs.secd.rkt  pal3.bcpl  (+13 more)
ya-secd-machine/doc-and-edu/rpal-0.2.0-rc1/: Makefile.in  NEWS  configure  configure.in  lex.c  rpal-mode.el  rpal.c  rpal.h  rpal.y
ya-secd-machine/doc-and-edu/rpal-0.2.0-rc1/doc/: Makefile.am
ya-secd-machine/doc-and-edu/rpal-0.2.0-rc1/lib/: Makefile.am  Makefile.in
ya-secd-machine/doc-and-edu/rpal-0.2.0-rc1/m4/: Makefile.am  Makefile.in
ya-secd-machine/doc-and-edu/rpal-0.2.0-rc1/tests/: README
ya-secd-machine/rpal-0.2.0-rc1/: AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  lex.l  rpal.1  rpal.1.xml  rpal.scm
ya-secd-machine/rpal-0.2.0-rc1/doc/: Makefile.in
ya-secd-machine/rpal-0.2.0-rc1/lib/: empty.c
ya-secd-machine/rpal-0.2.0-rc1/tests/: Makefile.am  Makefile.in  bottles.rpal  hanoi.rpal
(+25 files in other folders)
